@@ -4,14 +4,15 @@
 __all__ = [
     'guess_name',
     'open',
+    'set_pdf',
     'request_ads',
-    'add_ads_request',
     'fetch',
     ]
 
 import re
 import os
 import sys
+import shutil
 import urllib
 import subprocess
 import webbrowser
@@ -138,6 +139,97 @@ def open(pdf=None, key=None, bibcode=None):
         subprocess.call([opener, pdf_file])
 
 
+def set_pdf(bib, pdf=None, bin_pdf=None, name=None, arxiv=False, replace=False):
+    """
+    Update the PDF file of the given BibTex entry in database
+    If pdf is not None, move the file into the database pdf folder.
+
+    Parameters
+    ----------
+    bibcode: String or Bib() instance
+        Entry to be updated (must exist in the Bibmanager database).
+        If string, the ADS bibcode of key ID of the entry.
+    pdf: String
+        Path to an existing PDF file.
+        Only one of pdf and bin_pdf must be not None.
+    bin_pdf: String
+        PDF content in binary format (e.g., as in req.content).
+        Only one of pdf and bin_pdf must be not None.
+    arxiv: Bool
+        Flag indicating the source of the PDF.  If True,
+    name: String
+        Filename to assign to the PDF file.  If None, take name from
+        pdf input argument, or else from guess_name().
+    replace: Bool
+        Replace without asking if the entry already has a PDF assigned;
+        else, ask the user.
+    """
+    pdf_dir = cm.get('pdf_dir')
+
+    if isinstance(bib, str):
+        e = bm.find(key=bib)
+        bib = bm.find(bibcode=bib) if e is None else e
+    if bib is None:
+        raise ValueError('BibTex entry is not in Bibmanager database')
+
+    if (pdf is None) + (bin_pdf is None) != 1:
+        raise ValueError('Exactly one of pdf or bin_pdf must be not None')
+
+    # Let's have a guess, if needed:
+    guess_filename = guess_name(bib, arxiv=arxiv)
+    if name is None:
+        name = os.path.basename(pdf) if pdf is not None else guess_filename
+
+    if pdf is not None and bib.pdf is not None:
+        pdf_is_not_bib_pdf = os.path.abspath(pdf) != f'{pdf_dir}{bib.pdf}'
+    else:
+        pdf_is_not_bib_pdf = True
+
+    # PDF files in pdf_dir (except for the entry being fetched):
+    pdf_names = [file for file in os.listdir(pdf_dir)
+                 if os.path.splitext(file)[1] == '.pdf']
+    with u.ignored(ValueError):
+        pdf_names.remove(bib.pdf)
+    if pdf == f'{pdf_dir}{name}':
+        pdf_names.remove(name)
+
+    if not replace and bib.pdf is not None and pdf_is_not_bib_pdf:
+        rep = u.req_input(f"Bibtex entry already has a PDF file: '{bib.pdf}'  "
+            "Replace?\n[]yes, [n]o.\n", options=['', 'y', 'yes', 'n', 'no'])
+        if rep in ['n', 'no']:
+            return
+
+    while name in pdf_names:
+        overwrite = input(
+            f"A filename '{name}' already exists.  Overwrite?\n"
+            f"[]yes, [n]o, or type new file name (e.g., {guess_filename}).\n")
+        if overwrite in ['n', 'no']:
+            return
+        elif overwrite in ['', 'y', 'yes']:
+            break
+        elif overwrite.lower().endswith('.pdf'):
+            name = overwrite
+
+    # Delete pre-existing file only if not merely renaming:
+    if pdf is None or pdf_is_not_bib_pdf:
+        with u.ignored(OSError):
+            os.remove(f"{pdf_dir}{bib.pdf}")
+
+    if pdf is not None:
+        shutil.move(pdf, f"{pdf_dir}{name}")
+    else:
+        with builtin_open(f"{pdf_dir}{name}", 'wb') as f:
+            f.write(bin_pdf)
+    print(f"Saved PDF to: '{pdf_dir}{name}'.")
+
+    # Update entry and database:
+    bibs = bm.load()
+    index = bibs.index(bib)
+    bib.pdf = name
+    bibs[index] = bib
+    bm.save(bibs)
+
+
 def request_ads(bibcode, source='journal'):
     """
     Request a PDF from ADS.
@@ -230,73 +322,6 @@ def request_ads(bibcode, source='journal'):
     return req
 
 
-def add_ads_request(bibcode, req_content, source='journal', filename=None,
-        replace=False):
-    """
-    Update the PDF file of database entry pointed by bibcode with
-    req_content.
-
-    Parameters
-    ----------
-    bibcode: String
-        ADS bibcode of entry to update.
-    req_content: String
-        Request response content with the PDF (as in req.content).
-    source: String
-        Flag indicating the source of the requested PDF.
-        Choose between: 'journal', 'ads', or 'arxiv'.
-    filename: String
-        Filename to assign to the PDF file.  If None, get from
-        guess_name() funcion.
-    replace: Bool
-        Replace without asking if the entry already has a PDF assigned;
-        else, ask the user.
-    """
-    # Entry to be updated:
-    bibs = bm.load()
-    bib = bm.find(bibcode=bibcode, bibs=bibs)
-    if bib is None:
-        raise ValueError(f"bibcode '{bibcode}' is not in the database.")
-
-    # PDF files in pdf_dir (except for the entry being fetched):
-    pdf_dir = cm.get('pdf_dir')
-    pdf_names = [file for file in os.listdir(pdf_dir)
-                 if os.path.splitext(file)[1] == '.pdf']
-    with u.ignored(ValueError):
-        pdf_names.remove(bib.pdf)
-
-    # Let's have a guess, if needed:
-    guess_filename = guess_name(bib, arxiv=source=='arxiv')
-    if filename is None:
-        filename = guess_filename
-
-    if not replace and bib.pdf is not None:
-        rep = u.req_input(f"Bibtex entry already has a PDF file: '{bib.pdf}'  "
-            "Overwrite?\n[]yes, [n]o.\n", options=['', 'y', 'yes', 'n', 'no'])
-        if rep in ['n', 'no']:
-            return
-
-    while filename in pdf_names:
-        overwrite = input(
-            f"A filename '{filename}' already exists.  Overwrite?\n"
-            f"[]yes, [n]o, or type new file name (e.g., {guess_filename}).\n")
-        if overwrite in ['n', 'no']:
-            return
-        elif overwrite in ['', 'y', 'yes']:
-            break
-        elif overwrite.lower().endswith('.pdf'):
-            filename = overwrite
-
-    with u.ignored(OSError):
-        os.remove(f"{pdf_dir}{bib.pdf}")
-
-    with builtin_open(f"{pdf_dir}{filename}", 'wb') as f:
-        f.write(req_content)
-    print(f"Saved fetched PDF into: '{pdf_dir}{filename}'.")
-    bib.pdf = filename
-    bm.save(bibs)
-
-
 def fetch(bibcode, filename=None):
     """
     Attempt to fetch a PDF file from ADS.  If successful, then
@@ -319,7 +344,7 @@ def fetch(bibcode, filename=None):
     if req is None:
         return
     if req.status_code == 200:
-        add_ads_request(bibcode, req.content, 'journal', filename, replace=True)
+        set_pdf(bibcode, bin_pdf=req.content, name=filename, replace=True)
         return
 
     print('Fetching PDF file from ADS website:')
@@ -327,7 +352,7 @@ def fetch(bibcode, filename=None):
     if req is None:
         return
     if req.status_code == 200:
-        add_ads_request(bibcode, req.content, 'ads', filename, replace=True)
+        set_pdf(bibcode, bin_pdf=req.content, name=filename, replace=True)
         return
 
     print('Fetching PDF file from ArXiv website:')
@@ -335,7 +360,8 @@ def fetch(bibcode, filename=None):
     if req is None:
         return
     if req.status_code == 200:
-        add_ads_request(bibcode, req.content, 'arxiv', filename, replace=False)
+        set_pdf(bibcode, bin_pdf=req.content, name=filename, arxiv=True,
+            replace=False)
         return
 
     print('Could not fetch PDF from any source.')
